## Template for automake for libgromos

SUBDIRS = gsl gmath gcore gio bound fit args utils 

## will not be built during development
## lib_LTLIBRARIES = libgromos.la

## List to be completed...
## libgromos_la_SOURCES = ...

## libgromos_la_LDFLAGS = -version-info $(GROMOS_MAJOR_VERSION):$(GROMOS_MICRO_VERSION):0


