## Template for automake for libgromos

SUBDIRS = gromos gmath gcore gio bound utils fit args 

## will not be built during development
## lib_LTLIBRARIES = libgromos.la

## List to be completed...
## libgromos_la_SOURCES = ...

## libgromos_la_LDFLAGS = -version-info $(GROMOS_MAJOR_VERSION):$(GROMOS_MICRO_VERSION):0


