add_library(gcore OBJECT
  Angle.cc
  AngleType.cc
  AtomPair.cc
  AtomTopology.cc
  MassType.cc
  Bond.cc
  BondType.cc
  Box.cc
  Remd.cc
  Constraint.cc
  CrossDihedral.cc
  Dihedral.cc
  DihedralType.cc
  Exclusion.cc
  GromosForceField.cc
  Improper.cc
  ImproperType.cc
  LJType.cc
  LJException.cc
  LJExceptionType.cc
  MoleculeTopology.cc
  Molecule.cc
  SolventTopology.cc
  Solvent.cc
  BuildingBlock.cc
  BbSolute.cc
  BbLink.cc
  System.cc
  LinearTopology.cc
  PtTopology.cc
  VirtualAtoms.cc
  VirtualAtomType.cc
  Weight.cc
)
target_include_directories(gcore PRIVATE
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_SOURCE_DIR}/src
)
