add_library(utils OBJECT
  parse.cc
  Rmsd.cc
  Neighbours.cc
  VirtualAtom.cc
  Noe.cc
  AtomSpecifier.cc
  AtomSpecifier_parse.cc
  AtomicRadii.cc
  CremerPople.cc
  VectorSpecifier.cc
  PropertyContainer.cc
  Property.cc
  Energy.cc
  TrajArray.cc
  CheckTopo.cc
  Hbond_calc.cc
  Hbond_calc_2c.cc
  Hbond_calc_3c.cc
  Hbond_calc_bridges.cc
  Hbond.cc
  Dssp.cc
  EnergyTraj.cc
  RestrTraj.cc
  DipTraj.cc
  SimplePairlist.cc
  SoluteWeightedDistance.cc
  FfExpert.cc
  FfExpertGraph.cc
  groTime.cc
  RdcFuncs.cc
  Temperature.cc
  JvalFuncs.cc
  CommandLine.cc
  debug.cc
  AminoAcid.cc
  RDF.cc
  NeutronScattering.cc
  Disicl.cc
  Gch.cc
  IntegerInputParser.cc
  StringOps.cc
)
target_include_directories(utils PRIVATE
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_SOURCE_DIR}/src
  ${GSL_INCLUDE_DIRS}
)
